--- a/src/app/members/members.component.html
+++ b/src/app/members/members.component.html
@@ -1,1 +1,14 @@
-<p>members works!</p>
+<form [formGroup]="requestForm">
+    <div class="form-group">
+        <label for="chamber_field">Chamber</label>
+        <select class="form-control" id="chamber_field" formControlName="chamber" name="chamber_field" (change)="selectChamber()">
+          <option *ngFor="let chamb of chambers" [value]="chamb">{{ chamb | chambers }}</option>
+        </select>
+    </div>
+    <div class="form-group">
+        <label for="congress_field">Congress</label>
+        <select class="form-control" id="congress_field" name="chamber_field" formControlName="congress">
+          <option *ngFor="let congress of congressList">{{congress}}</option>
+        </select>
+    </div>
+</form>
