Working on members and detail view.

--- a/src/app/members/member-detail/member-detail.component.html
+++ b/src/app/members/member-detail/member-detail.component.html
@@ -1,1 +1,6 @@
-<p>member-detail works!</p>
+<div class="member-detail">
+    <div class="row member-att" *ngFor="let memberAtt of member | keyvalue">
+        <div class="title col-3">{{ memberEnum[memberAtt.key]}}:</div>
+        <div class="value col-9">{{memberAtt.value ? memberAtt.value : '-'}}</div>
+    </div>
+</div>
