--- a/src/app/members/member-detail/member-detail.component.html
+++ b/src/app/members/member-detail/member-detail.component.html
@@ -1,4 +1,5 @@
-<div class="member-detail">
+<div class="member-detail container mt-3" *ngIf="member">
+    <h2>Member: {{member.first_name}} {{member.last_name}} <button class="btn btn-info float-right" [routerLink]="'/'"><i class="fa fa-chevron-left"></i> Back</button></h2>
     <div class="row member-att" *ngFor="let memberAtt of member | keyvalue">
         <div class="title col-3">{{ memberEnum[memberAtt.key]}}:</div>
         <div class="value col-9">{{memberAtt.value ? memberAtt.value : '-'}}</div>
