--- a/src/app/members/members.component.scss
+++ b/src/app/members/members.component.scss
@@ -1,23 +1,6 @@
 .members {
     .table-wrapper {
         overflow-x: scroll;
-        /* width */
-        &::-webkit-scrollbar {
-            width: 10px;
-            height: 10px;
-        }
-        /* Track */
-        &::-webkit-scrollbar-track {
-            background: #f1f1f1;
-        }
-        /* Handle */
-        &::-webkit-scrollbar-thumb {
-            background: #888;
-        }
-        /* Handle on hover */
-        &::-webkit-scrollbar-thumb:hover {
-            background: #555;
-        }
         .members-table {
             thead,
             tbody {
@@ -46,5 +29,8 @@
                 margin-top: 2.3rem;
             }
         }
+    }
+    .pagination {
+        overflow-x: scroll;
     }
 }
