--- a/src/app/members/member-detail/member-detail.component.scss
+++ b/src/app/members/member-detail/member-detail.component.scss
@@ -9,3 +9,12 @@
         }
     }
 }
+
+@media(max-width: 767px) {
+    .member-detail {
+        h2 {
+            font-size: 18px;
+        }
+        font-size: 14px;
+    }
+}
